0.764 (03.23.2007) - John Siracusa <siracusa@mindspring.com>

    * Made changes_only, cascade, and prepare_cached arguments to save()
      also apply to *_on_save collections.  XXX: Needs tests
    * Added test and prerequisite version for a Rose::DB bug that
      prevented certain reserved words from being detected as primary
      key columns in Postgres.  (Reported by Fred Cox)
    * Fixed a bug that caused values not to be checked against the list
      of valid values in SET columns.  (Reported by Adrian Howard)
    * Fixed a bug that caused column (get/)set methods not to return the
      correct value when an on_set trigger was applied to the column.
      (Reported by Cory Bennett)
    * Fixed a bug that caused enum columns to be incorrectly marked as
      modified in some circumstances.  (Reported by Cory Bennett)
    * Fixed a bug that caused inflate/deflate triggers to fail under some
      circumstances.  (Patch by Cory Bennett)

0.763 (02.24.2007) - John Siracusa <siracusa@mindspring.com>

    * Re-enabled the DBD::SQLite 1.13 work-around in the test suite, which
      I temporarily disabled to test a 1.14 candidate and then forgot to
      re-enable before the 0.762 release.

0.762 (02.24.2007) - John Siracusa <siracusa@mindspring.com>

    * Fixed an unparseable version number in MakeMethods::BigNum
      that was causing CPAN and associated tools to choke.

0.761 (02.23.2007) - John Siracusa <siracusa@mindspring.com>

    * Added the ability to specify a unique key by name in calls to load().
    * Added support for query_args and other Manager parameters to
      one-to-one and one-to-many relationships.
    * Added a "find" method type to one-to-many relationships for 
      ad-hoc queries.
    * Added support for Informix's "datetime year to month" column type.
    * Updated the dbh() method to be a more conventional proxy for ->db->dbh().
    * The get_objects() and delete_objects() Manager methods now accept a lone